# pulse-spatial

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCE.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
docs/: evaluation-plan.md  formal-semantics.md  geosparql-profile.md  language-design.md  projections.md  reference-validation.md  standards-map.md
examples/: cold_chain_geofence.pulse  cold_chain_spatiotemporal.pulse  paper_cold_chain_st.pulse
experiments/composition/: README.md
experiments/composition/results/: cold-chain-composition-2026-07-19.json  cold-chain-composition-2026-07-19.md  cold-chain-composition-2026-07-21.json  cold-chain-composition-2026-07-21.md  contract-fault-localization-2026-07-21.json  contract-fault-localization-2026-07-21.md  temporal-contract-mutation-sensitivity-2026-07-21.json  temporal-contract-mutation-sensitivity-2026-07-21.md
experiments/end-to-end/: README.md
experiments/end-to-end/results/: ibtracs-four-mode-2026-07-19.json  ibtracs-four-mode-2026-07-19.md
experiments/formal-properties/: README.md
experiments/formal-properties/results/: bounded-depth4-2026-07-19.json  bounded-depth4-2026-07-19.md  bounded-depth4-2026-07-21.json  bounded-depth4-2026-07-21.md
experiments/geosparql-external/: README.md
experiments/geosparql-external/results/: jena-topology-2026-07-19.json  jena-topology-2026-07-19.md  jena-topology-expanded-2026-07-20.json  jena-topology-expanded-2026-07-20.md
experiments/ibtracs/: README.md  synthetic-format-fixture.csv
experiments/ibtracs/results/: ibtracs-last3years-2026-07-19.json  (+3 more)
experiments/lean-trace-bridge/: README.md
experiments/ogc-geosparql-1.1/: README.md  ats-manifest.json
experiments/postgis/: CONCURRENCY.md  README.md
experiments/scalability/: README.md
experiments/semantic-sensitivity/: README.md
experiments/spatiotemporal/: README.md
experiments/statechart-comparison/: README.md  scenario-isolation.yaml
experiments/topology/: README.md
formal/lean/: CompilerMain.lean  Dockerfile  PulseFormal.lean  README.md  TraceMain.lean  generated-integrated-traces.json  lake-manifest.json  lakefile.toml  paper-cold-chain-ir.json
grammar/: pulse-s.ebnf
src/pulse_spatial/: __init__.py  __main__.py  canonical_ir.py  compiler.py  geometry.py  language.py  model.py  parser.py  projection.py  runtime.py  validation.py
tests/: test_compiler_refinement.py  test_composition_experiment.py  test_contract_faults_experiment.py  test_end_to_end_experiment.py  test_formal_properties_experiment.py  test_geometry.py  test_geosparql_external_experiment.py  test_ibtracs_experiment.py  test_lean_trace_bridge.py  test_modal_runtime.py  test_ogc_conformance.py  test_parser_compiler.py  test_postgis_baseline.py  test_postgis_concurrency.py  test_postgis_slo_evidence.py  test_postgis_topology_external.py  test_projection.py  test_reference_validation.py  test_scalability_experiment.py  test_semantic_sensitivity.py  test_spatiotemporal_experiment.py  test_statechart_comparison.py  test_topology_corpus.py
(+90 files in other folders)
