[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-spatial"
version = "0.1.0a0"
description = "Experimental modal spatial semantics for the PULSE language"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Dongxu Yang" }
]
keywords = [
  "knowledge-graphs",
  "spatial-semantics",
  "geosparql",
  "domain-specific-language"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.urls]
Homepage = "https://github.com/deeplethe/pulse-spatial"
Repository = "https://github.com/deeplethe/pulse-spatial"

[project.scripts]
pulse-spatial = "pulse_spatial.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
