[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-spatial"
version = "0.1.0a0"
description = "Experimental modal spatial semantics for the PULSE language"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Dongxu Yang" }
]
keywords = [
  "knowledge-graphs",
  "spatial-semantics",
  "geosparql",
  "domain-specific-language"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS"
]

[project.urls]
Homepage = "https://github.com/deeplethe/pulse-spatial"
Repository = "https://github.com/deeplethe/pulse-spatial"

[project.scripts]
pulse-spatial = "pulse_spatial.__main__:main"
pulse-spatial-ibtracs = "pulse_spatial.experiments.ibtracs:main"
pulse-spatial-spatiotemporal = "pulse_spatial.experiments.spatiotemporal:main"
pulse-spatial-composition = "pulse_spatial.experiments.composition:main"
pulse-spatial-topology-corpus = "pulse_spatial.experiments.topology_corpus:main"
pulse-spatial-semantic-sensitivity = "pulse_spatial.experiments.semantic_sensitivity:main"
pulse-spatial-end-to-end = "pulse_spatial.experiments.end_to_end:main"
pulse-spatial-geosparql-external = "pulse_spatial.experiments.geosparql_external:main"
pulse-spatial-formal-properties = "pulse_spatial.experiments.formal_properties:main"
pulse-spatial-scalability = "pulse_spatial.experiments.scalability:main"
pulse-spatial-postgis = "pulse_spatial.experiments.postgis_baseline:main"
pulse-spatial-ogc-conformance = "pulse_spatial.experiments.ogc_conformance:main"
pulse-spatial-postgis-concurrency = "pulse_spatial.experiments.postgis_concurrency:main"
pulse-spatial-postgis-slo = "pulse_spatial.experiments.postgis_concurrency:main_slo"
pulse-spatial-postgis-slo-evidence = "pulse_spatial.experiments.postgis_slo_evidence:main"

[project.optional-dependencies]
validation = [
  "pyshacl>=0.40,<1",
  "shapely>=2.1,<3"
]
test = [
  "pyshacl>=0.40,<1",
  "rdflib>=7.1,<8",
  "shapely>=2.1,<3"
]

[tool.setuptools.packages.find]
where = ["src"]
